--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <nav>
-        <a href="">texto 1</a>
-        <a href="">texto 2</a>
-        <a href="">texto 3</a>
+        <a href="">Inicio</a>
+        <a href="">Contacto</a>
+        <a href="">Blog</a>
     </nav>
+    <h2>Nuevo titulo</h2>
 </body>
 </html>
